--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     h2 {
         color: rgb(4, 2, 0);
     }
-    #economia h2{ color: rgb(233, 220, 135); 
+    #economia h2{ color: rgba(217, 120, 2, 0.804); 
     }
     .creation-date {color: blueviolet;
     }
